Icon small fix for tiny screens

--- a/src/components/Contact/style.css
+++ b/src/components/Contact/style.css
@@ -10,5 +10,5 @@
 }
 
 .icon-contact{
-    max-height: 50px;
+    max-height: 40px;
 }
